--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -2183,6 +2183,77 @@ table.auTable tr td {
     background: #f7f7f7;
 }
 
+/* Main Container : QuickMenu : Cop */
+.MainQuickMenu {
+    position: fixed;
+    top: 60px;
+    right: 20px;
+    width: 100px;
+    height: auto;
+}
+.MainQuickMenu ul li {
+    background: #fff;
+    margin-bottom: 10px;
+}
+.QuickDdayBox {
+    height: 90px;
+    border: 1px solid #dbdbdb;
+    text-align: center; 
+}
+.QuickDdayBox .q_tit {
+    font-size: 15px;
+    font-weight: 600;
+    color: #464646;
+    padding-top: 10px;
+}
+.QuickDdayBox .q_day {
+    font-size: 11px;
+    color: #464646;
+    line-height: 16px;
+}
+.QuickDdayBox .q_dday {
+    font-size: 24px;
+    font-weight: 600;
+    color: #0068c0;
+    padding-top: 10px;
+    letter-spacing: 0;
+}
+.QuickSlider .bx-wrapper .bx-prev {
+    background: url("../../img/willbes/cop/btn_quick_prev.jpg") no-repeat 0 0;
+    left: 0;
+}
+.QuickSlider .bx-wrapper .bx-next {
+    background: url("../../img/willbes/cop/btn_quick_next.jpg") no-repeat 0 0;
+    right: 0;
+    left: auto;
+}
+.QuickSlider .bx-wrapper .bx-controls-direction {
+    position: absolute;
+    bottom: 5px;
+    left: 0;
+    right: 0;
+    width: 54px;
+    height: 14px;
+    margin: 0 auto;
+}
+.QuickSlider .bx-wrapper .bx-controls-direction a {
+    width: 12px;
+    height: 13px;
+}
+.QuickSlider .bx-wrapper .bx-pager {
+    width: auto;
+    position: absolute;
+    bottom: 7px;
+    left: 0;
+    right: 0;
+    font-size: 10px;
+    font-weight: 300;
+    color: #000;
+    margin: 0;
+    padding: 0;
+    letter-spacing: 0;
+}
+
 /* Main Container : Tit : Cop */
 .Section .will-big-Tit {
     text-align: center;
@@ -2405,9 +2476,6 @@ table.auTable tr td {
     background:#333
 }
 
-
-
-
 /* Main Container : pass : cSlider : sliderPassList : Cop */
 .cswSlider.sliderCurriList .bx-wrapper .bx-prev {
     background: url("../../img/willbes/cop/btn_prev_on.png") no-repeat 0 0;
@@ -2445,10 +2513,6 @@ table.auTable tr td {
     width: 21px;
     height: 77px;
 }
-
-
-
-
 
 /* Main Container : SpecialLecBox */
 .Section .SpecialLecBox dl dt {
@@ -7323,7 +7387,7 @@ ul li.profList .willbes-Layer-ProfileBox {
     top: 60px;
     right: 20px;
     z-index: 110;
-    width: 740px;
+    width: 890px;
     height: 620px;
     border: 1px solid #2f2f2f;
     padding: 20px 25px 30px;
@@ -7352,10 +7416,6 @@ ul li.profList .willbes-Layer-ProfileBox {
     line-height: 24px;
     border: 1px solid #e2e2e2;
     overflow-x: auto;
-}
-.willbes-Layer-CurriBox .Layer-Txt img {
-    width: 100%;
-    height: 100%;
 }
 
 /* subContainer : Prof : willbes-Layer-ReplyBox */
