--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -7,6 +7,18 @@
 			 url("../../fonts/NotoSansCJK/NotoSansCJKkr-Regular.woff") format('woff');
 }
 
+/* NotoSansCJK Thin */
+@font-face {
+	font-family: "NotoSansCJKkr-Thin";
+	src: url("../../fonts/NotoSansCJK/NotoSansCJKkr-Thin.otf");
+}
+
+/* NotoSansCJK Black */
+@font-face {
+	font-family: "NotoSansCJKkr-Black";
+	src: url("../../fonts/NotoSansCJK/NotoSansCJKkr-Black.otf");
+}
+
 /* NanumGothic Bold */
 @font-face {
 	font-family: "NanumGothic-Bold";
@@ -322,6 +334,12 @@ select[disabled] {
 .NSK {
 	font-family: "NotoSansCJKkr-Regular", "Noto Sans KR", "sans-serif";
 }
+.NSK-Thin {
+	font-family: "NotoSansCJKkr-Thin", "Noto Sans KR", "sans-serif";
+}
+.NSK-Black {
+	font-family: "NotoSansCJKkr-Black", "Noto Sans KR", "sans-serif";
+}
 .NG {
 	font-family: "NanumGothic-Bold", "Nanum Gothic", "나눔고딕", "sans-serif";
 }
@@ -351,6 +369,14 @@ select[disabled] {
 }
 .widthAuto330 {
   width: 330px;
+  margin: 0 auto;
+}
+.widthAuto350 {
+  width: 350px;
+  margin: 0 auto;
+}
+.widthAuto353 {
+  width: 353px;
   margin: 0 auto;
 }
 .widthAuto365 {
@@ -576,6 +602,12 @@ select[disabled] {
 .mt85 {
   margin-top: 85px !important;
 }
+.mt90 {
+  margin-top: 90px !important;
+}
+.mt95 {
+  margin-top: 95px !important;
+}
 .mt100 {
   margin-top: 100px !important;
 }
@@ -644,6 +676,9 @@ select[disabled] {
 .ml20 {
   margin-left: 20px !important;
 }
+.ml35 {
+  margin-left: 35px !important;
+}
 .ml45 {
   margin-left: 45px !important;
 }
@@ -673,6 +708,9 @@ select[disabled] {
 .pt-zero {
   padding-top: 0px !important;
 }
+.pt4 {
+  padding-top: 4px !important;
+}
 .pt10 {
   padding-top: 10px !important;
 }
@@ -696,6 +734,9 @@ select[disabled] {
 }
 .pt50 {
   padding-top: 50px !important;
+}
+.pt100 {
+  padding-top: 100px !important;
 }
 
 .pl-zero {
@@ -764,6 +805,9 @@ select[disabled] {
 .pb50 {
   padding-bottom: 50px !important;
 }
+.pb55 {
+  padding-bottom: 55px !important;
+}
 .pb60 {
   padding-bottom: 60px !important;
 }
@@ -775,6 +819,9 @@ select[disabled] {
 }
 .pb85 {
   padding-bottom: 85px !important;
+}
+.pb90 {
+  padding-bottom: 90px !important;
 }
 .pb110 {
   padding-bottom: 110px !important;
