--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -7678,6 +7678,8 @@ ul li.profList .willbes-Layer-ProfileBox {
 }
 .willbes-Prof-Profile .prof-brief-btn li a {
     display: block;
+    width: 100%;
+    height: 100%;
 }
 .willbes-Prof-Profile .prof-brief-btn li img {
     padding-top: 10px;
