--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -998,6 +998,7 @@ table.auTable tr td {
 .dropdown:hover .left-drop-Box {
     opacity: 1;
     visibility: visible;
+    width: 380px;
 }
 .left-drop-Box {
     position: absolute;
@@ -1009,6 +1010,7 @@ table.auTable tr td {
     box-shadow: 5px 5px 25px #e1e1e1;
     opacity: 0;
     visibility: hidden;
+    width: 0;
 }
 
 .left-drop-Box:after,
