--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -232,11 +232,15 @@ html {
   table {
 	border-spacing: 0;
   border-collapse: collapse;
+  border-style: none;
+  padding: 0;
   width: 100%;
   }
   td,
   th {
-	padding: 0;
+  padding: 0;
+  border-spacing: 0;
+  border-style: none;
   }
   * {
 	-webkit-box-sizing: border-box;
