--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -1581,7 +1581,23 @@ select.input-sm {
     margin: 0;
 }
 
-
+/* loading Form */
+div.dataTables_wrapper div.dataTables_processing {
+    position: fixed;
+    top: 0;
+    left: 0;
+    margin: 0;
+    text-align: center;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: #000;
+    opacity: 0.5;
+    color: #fff;
+    line-height: 33em;
+    font-size: 25px;
+}
 
 /* media Query */
 @media (max-width: 1200px) {
