--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -4032,6 +4032,9 @@ ul.dot li {
     padding: 0 10px;
     vertical-align: baseline;
 }
+.Depth .depth:last-child strong {
+    color: #2784d2;
+}
 
 /* subContainer : Lnb */
 .Lnb {
@@ -8288,7 +8291,7 @@ ul li.profList .willbes-Layer-ProfileBox {
 }
 .willbes-Lec-Selected select {
     width: 140px;
-    height: 27px;
+    height: 30px;
     margin-right: 8px;
 }
 
