--- a/public/css/willbes/m/style.css
+++ b/public/css/willbes/m/style.css
@@ -1266,10 +1266,12 @@ body.memBody #Footer {
 }
 .lecTable .w-s-date .grid {
     border-top: 1px solid #ccc;
+    padding: 0 20px;
 }
 .lecTable .w-s-date input[type="text"] {
     width: 15%; 
     height: 30px;
+    padding: 0 0.6rem;
 }
 .lecTable .w-line {
     background: #e9e9e9;
@@ -1323,16 +1325,15 @@ body.memBody #Footer {
 }
 .AddlecMore {
     clear: both;
-    background: #1a8ccc;
-    height: 45px;
-    margin: 10px 20px;
 }
 .AddlecMore a {
+    background: #1a8ccc;
     display: block;
     font-size: 14px;
     color: #fff;
     text-align: center;
     line-height: 45px;
+    margin: 10px 20px;
 }
 .AddlecMore a img {
     width: 30px;
