--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -12408,7 +12408,6 @@ table.acadlecInfoPackageTable tr.Top td {
     table.combineTable .inputBox button.combine-Btn {
         width: 100%;
         height: 38px;
-        margin: 0 !important;
     }
     table.combineTable ul.chkBox-Sex {
         float: inherit;
@@ -12436,6 +12435,16 @@ table.acadlecInfoPackageTable tr.Top td {
     }
     table.combineTable dl dt.mbox1 input {
         width: 100% !important;
+    }
+    table.combineTable dl dt.mbox2 {
+        width: 40%;
+        height: 100%;
+        float: right;
+    }
+    table.combineTable dl dt.mbox-sele {
+        width: 100%;
+        height: 100%;
+        float: right;
     }
     table.combineTable dl dt.mbox-dot {
         line-height: 38px;
@@ -12469,6 +12478,10 @@ table.acadlecInfoPackageTable tr.Top td {
     .agree-Chk ul li .agree-Tit a {
         width: 80%;
         padding: 17px 0;
+    }
+    .agree-Chk ul li .agree-Tit a .tx12 {
+        display: block;
+        margin: 5px 0 0 40px;
     }
 
     /* Login Form : 통합회원가입 : 회원가입완료 */
