--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -5676,16 +5676,19 @@ table.classTable tr td.w-data {
 
 /* subContainer : Content : 강의목차 : LeclistTable : evtTable */
 .LeclistTable .evtTable thead tr td {
-    background: #f9f9f9;
+    background: #f9f9f9 !important;
     border-top: 1px solid #edeeef;
+}
+.LeclistTable .evtTable thead tr th {
+    background: #f9f9f9 !important;
 }
 .LeclistTable .evtTable thead tr:first-child td {
     border-top: 1px solid #959595;
 }
 .LeclistTable .evtTable tr th textarea {
     float: left;
-    width: 800px;
-    height: 80px;
+    width: 800px !important;
+    height: 80px !important;
     font-weight: 300;
     border: 1px solid #d4d4d4;
     resize: none;
@@ -5694,8 +5697,8 @@ table.classTable tr td.w-data {
     line-height: 16px;
 }
 .LeclistTable .evtTable tr th button {
-    height: 80px;
-    line-height: 78px;
+    height: 80px !important;
+    line-height: 78px !important;
 }
 .LeclistTable .evtTable tr td {
     line-height: 16px;
