고객센터 / 내강의실 디자인 수정 페이지 업로드

--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -383,6 +383,10 @@ select[disabled] {
   width: 353px;
   margin: 0 auto;
 }
+.widthAuto360 {
+  width: 360px;
+  margin: 0 auto;
+}
 .widthAuto365 {
   width: 365px;
   margin: 0 auto;
