--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -8553,6 +8553,7 @@ ul li.profList .willbes-Layer-ProfileBox {
 .csCenterSearch .SearchBox .sTitsub {
     font-size: 12px;
     color: #555;
+    line-height: 16px;
 }
 
 .csCenterSearch .willbes-Lec-Search {
@@ -9168,17 +9169,16 @@ ul li.profList .willbes-Layer-ProfileBox {
 }
 
 /* subContainer : Mypage : 무한PASS존 : Mypage_PASS_Index : ActIndex1 */
+.Mypage_PASS_Index .ActIndex1 table.lecTable tr td {
+    padding: 10px 0;
+}
 .Mypage_PASS_Index .ActIndex1 table.lecTable tr td.w-list {
-    background: #f9f9f9;
-    font-size: 14px;
-    line-height: 18px;
-    padding: 0;
+    padding-left: 15px;
 }
 .Mypage_PASS_Index .ActIndex1 table.lecTable tr td.w-list a {
     display: block; 
     padding: 0
 }
-/*
 .Mypage_PASS_Index .ActIndex1 table.lecTable tr td.w-percent .round {
     background: #f6f6f6;
     width: 78px;
@@ -9190,7 +9190,9 @@ ul li.profList .willbes-Layer-ProfileBox {
     line-height: 18px;
     padding-top: 18px;
 }
-*/
+.Mypage_PASS_Index .ActIndex1 table.lecTable tr td.w-percent .round .tx-blue {
+    font-size: 20px;
+}
 
 /* subContainer : Mypage : 무한PASS존 : Mypage_PASS_Index : ActIndex2 */
 .willbes-info .List-Table .aBox {
