--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -4376,6 +4376,22 @@ ul.dot li {
 .willbes-Lec-Subject .MoreBtn span {
     vertical-align: baseline;
 }
+.willbes-Lec-Subject .selectBoxForm {
+    float: right;
+}
+.willbes-Lec-Subject .selectBoxForm .MoreBtn {
+    float: left;
+}
+.willbes-Lec-Subject .selectBoxForm .selectBox {
+    width: 100px;
+    height: 30px;
+    font-size: 12px;
+    font-weight: 300;
+}
+.willbes-Lec-Subject .selectBoxForm .selectBox select {
+    width: 100px;
+    height: 30px;
+}
 
 /* subContainer : Content : Lec-Profdata */
 .willbes-Lec-Profdata {
@@ -8533,6 +8549,7 @@ ul li.profList .willbes-Layer-ProfileBox {
     border-right: 1px solid #e5e5e5;
     border-bottom: 1px solid #e5e5e5;
     margin-bottom: 1px;
+    margin-top: 10px;
 }
 .csCenterSearch .SearchBox:after {
     content: '';
@@ -8554,18 +8571,31 @@ ul li.profList .willbes-Layer-ProfileBox {
     font-size: 12px;
     color: #555;
     line-height: 16px;
+    padding: 29px 35px;
 }
-
+.csCenterSearch .SearchBox .searchBoxForm {
+    float: right;
+    margin: 25px 25px 25px 0;  
+}
+.csCenterSearch .SearchBox select {
+    background: #f4f4f5;
+    width: 110px;
+    height: 40px;
+    padding-bottom: 1px;
+    border: 4px solid #636363;
+    border-right: none;
+    outline: none;
+}
 .csCenterSearch .willbes-Lec-Search {
     float: right;
-    height: 40px;
-    margin: 25px;
+    height: 40px;  
 }
 .csCenterSearch .willbes-Lec-Search .inputBox {
     background: #f4f4f5;
     width: 310px;
     height: 40px;
     border: 4px solid #636363;
+    border-left: 1px solid #636363;
 }
 .csCenterSearch .willbes-Lec-Search .inputBox input {
     background: #f4f4f5;
@@ -8576,11 +8606,6 @@ ul li.profList .willbes-Layer-ProfileBox {
 }
 .csCenterSearch .willbes-Lec-Search .inputBox button {
     float: right;
-}
-.csCenterSearch .SearchBox select {
-    width: 90px;
-    height: 30px;
-    padding-bottom: 1px;
 }
 
 .csCenterSearch ul {
