--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -1056,6 +1056,7 @@ table.auTable tr td {
 .left-drop-Box ul li a {
     display: block;
     font-size: 14px;
+    font-weight: 300 !important;
     padding-left: 15px;
 }
 
